--- a/sub_3.html
+++ b/sub_3.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./bootstrap.min.css">
     <link rel="stylesheet" href="./style.css">
     <title>Document</title>
+    <script src="./js/jquery-3.6.0.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/script.js"></script>
 </head>
 <body>
 <input type="radio" name="menu" class="d-none" id="open" >
@@ -30,9 +33,9 @@
     </div>
 </div>
 <img src="./사진/photo%20(21).jpg" alt="" class="position-fixed background">
-<div class="position-fixed review text-center">
+<button class="position-fixed review text-center write_review" style="z-index: 20358">
     <p class="m-0">Write Review</p>
-</div>
+</button>
 <section class="event event_section position-relative d-flex justify-content-center align-items-center flex-column">
     <img src="./사진/review.png" alt="">
     <div class="d-flex w-75 under_bar">
@@ -181,6 +184,52 @@
 </section>
 <div class="w-100 copy text-center">
     <p class="m-0">Copyright (C) Gyeongsangbuk-do.All Rights Reserved.</p>
+</div>
+<div class="modal fade" id="review_modal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4>리뷰 작성</h4>
+            </div>
+            <form action="">
+            <div class="modal-body">
+                <div class="form-group">
+                    <p class="m-0">이름</p>
+                    <input type="text" class="form-control" name="name" required>
+                </div>
+                <div class="form-group">
+                    <p class="m-0">구매처</p>
+                    <input type="text" class="form-control" name="shop" required>
+                </div>
+                <div class="form-group">
+                    <p class="m-0">구매품</p>
+                    <input type="text" class="form-control" name="product" required>
+                </div>
+                <div class="form-group">
+                    <p class="m-0">구매일</p>
+                    <input type="date" class="form-control" name="purchase-date" required>
+                </div>
+                <div class="form-group">
+                    <p class="m-0">내용</p>
+                    <textarea type="date" class="form-control" name="contents" required></textarea>
+                </div>
+                <span class="position-relative star">
+                    ★★★★★
+                    <span class="position-absolute">★★★★★</span>
+                    <input type="range" min="0" max="10" step="1" value="1" class="position-absolute star">
+                </span>
+                <div class="file-div">
+                    <input type="file" class="form-control-file file-input" name="file">
+                </div>
+                <button class="btn btn-outline-success fill_add" type="button">파일추가</button>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-outline-secondary close">닫기</button>
+                <button class="btn btn-outline-success review_submit" type="submit">등록</button>
+            </div>
+            </form>
+        </div>
+    </div>
 </div>
 </body>
 </html>
